@@ -1,0 +1,1 @@
+Get ready for Tet 2026! View lunar calendar, find auspicious days, and manage events easily with Lich+ - the modern Vietnamese calendar app.
